# document-analytics-platform

./: README.md  analytics.py  app.py  classifier.py  database.py  database_manager.py  document_processor.py  pyproject.toml  search_engine.py  utils.py
